--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.YelpApp">
-        <activity android:name=".view.MainActivity">
+        <activity android:name=".view.SearchResultActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +19,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.SearchResultActivity"/>
     </application>
 
 </manifest>
